syntax = "proto3";
package plasticcreditledger.plasticcredits;

import "gogoproto/gogo.proto";
import "plasticcredits/params.proto";
import "plasticcredits/issuer.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "plasticcreditledger/x/plasticcredits/types";

// GenesisState defines the plasticcredits module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  string port_id = 2;
  repeated Issuer issuerList = 3 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
